[refactpr] Kpi entry controller.
